automation/applications/app-000002/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-000002
  namespace: app-000002

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app-000002

  template:
    metadata:
      labels:
        app: app-000002

    spec:
      containers:
      - name: app-000002
        image: nginx

        ports:
        - containerPort: 80
