automation/applications/app-000002/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-000002
  namespace: app-000002

spec:
  selector:
    app: app-000002

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
