automation/applications/app-000002/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-000002
  namespace: app-000002

spec:
  ingressClassName: nginx

  rules:
  - host: app-000002.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: app-000002

            port:
              number: 80
